@@ -8,6 +8,7 @@ would just return a blank list or None, it now raises an exception.
 the given object was formerly attached to was garbage collected;
 otherwise still requires you explicitly remove the instance from 
 the previous Session.
+- fixes to mapper compilation, checking for more error conditions
 
 0.2.3
 - overhaul to mapper compilation to be deferred.  this allows mappers
